--- a/src/app/views/auth/signup.njk
+++ b/src/app/views/auth/signup.njk
@@ -3,7 +3,7 @@
   <label for="avatar">
     <img src="/images/avatar.svg" height="24" alt="" />
   </label>
-  <input type="file" id="avatar" />
+  <input type="file" name="avatar" id="avatar" />
 
   <input type="text" name="name" id="name" placeholder="Name" />
   <input type="email" name="email" id="email" placeholder="Email" />
