finaliza autenticação, validação do forme de cadastro e login

--- a/src/app/views/auth/signup.njk
+++ b/src/app/views/auth/signup.njk
@@ -4,7 +4,7 @@
     <img src="/images/avatar.svg" height="24" alt="" />
   </label>
   <input type="file" name="avatar" id="avatar" />
-
+  {% include "_partials/message.njk" %}
   <input type="text" name="name" id="name" placeholder="Name" />
   <input type="email" name="email" id="email" placeholder="Email" />
   <input type="password" name="password" id="password" placeholder="Password" />
