--- a/src/app/views/dashboard.njk
+++ b/src/app/views/dashboard.njk
@@ -1,6 +1,20 @@
 
 {% extends "_layouts/default.njk" %}
 {% block body %}
-  <h1>Olá {{user.name}}</h1>
-  <a href="/app/logout">logout</a>
+  <div class="content">
+    <strong>Hello, {{user.name}}</strong>
+      <p>select your barber</p>
+    <ul class="providers">
+      {% for provider in providers %}
+      <li class="provider">
+        <div>
+          <img src="/files/{{provider.avatar}}"/>
+          <strong>{{provider.name}}</strong>
+        </div>
+        <a href="/app/appointments/new/{{provider.id}}">+</a>
+      </li>
+      {% endfor %}
+    </ul>
+  <a href="/app/logout" class="logout">logout </a>
+  </div>
 {% endblock %}
