--- a/src/app/views/appointments/create.njk
+++ b/src/app/views/appointments/create.njk
@@ -13,6 +13,7 @@
     <input type="text" placeholder="select a date" class="flatpickr" />
     <div id="hours"></div>
     <button type="submit">Register</button>
+    <a href="/app/dashboard" class="back">back</a>
   </form>
 </div>
 
