--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -163,7 +163,25 @@ body {
   color: #fff;
 }
 
+.main-wrapper .content form a.back {
+  background: #de6d6d;
+  text-decoration: none;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 14px;
+  border: 0;
+  color: #fff;
+  margin-top: 5px;
+}
+
 .main-wrapper .content a.logout:hover {
+  background: #c15858;
+}
+.main-wrapper .content form a.back:hover {
   background: #c15858;
 }
 
